# knowledge-base

./: .gitignore  .gitleaks.toml  .rumdl.toml  CLAUDE.md  currency.toml  hk.pkl  mise.toml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/workflows/: kb-extract.js
docs/: graphify-reference.md
docs/currency/: README.md  graphify-watch-state.json
graphify-out/: .graphify_labels.json  manifest.json
graphify-out/memory/: query_20260722_172532_does_graphify_reflect_produce_lessons_md__and_what.md  query_20260722_172532_how_do_you_merge_a_per_source_graph_into_a_multi_r.md  query_20260722_172532_why_does_kb_build_abort_when_a_source_repo_is_pros.md  query_20260722_173547_how_should_adding_a_source_to_the_kb_be_automated.md  query_20260722_174140_how_should_a_large_graphify_graph_json__119mb___gi.md  query_20260722_182137_are__subtask_and__fork_real_claude_code_commands.md  query_20260722_185459_how_does_managed_agent_multi_agent_orchestration.md  query_20260722_190440_what_patterns_keep_a_long_running_agent_working_au.md  query_20260722_190931_how_does_claude_code_keep_background_agent_fleets.md  query_20260722_225130_how_does_fable_5_advisor_executor_orchestration_wi.md  query_20260722_230021_what_doctrine_grounds_the_fable_5_orchestrator__ph.md  query_20260723_202751_what_did_the_2026_07_23_long_running_framework_ing.md  query_20260723_202752_how_to_ingest_docs_graphify_s_fetcher_can_t_get__a.md
python/: pyproject.toml
python/src/kb_setup/: __init__.py  _merge_docs.py  artifacts.py  chunks.py  cli.py  graph.py  graphify_env.py  graphify_ops.py  hook_guard.py  lint_checks.py  manifest.py  pr.py
python/src/kb_setup/currency/: __init__.py  _proc.py  apply.py  broad.py  config.py  decide.py  issues.py  report.py  run.py  sync.py  upstream.py
sources/: OpenSymphony.manifest  REGISTRY.md  Sol-Orchestrator.manifest  agents.manifest  antigravity-plugin-cc-chris.manifest  antigravity-plugin-cc-marcos.manifest  awesome-claude-code.manifest  awesome-harness-engineering.manifest  basic-memory.manifest  claude-code-memory-setup.manifest  claude-docs-backlog.txt  claude-plugins-community.manifest  codex-orchestration.manifest  cognee.manifest  cymphony.manifest  deer-flow.manifest  dotfiles.manifest  ecc.manifest  fable-advisor.manifest  fable-orchestrator.manifest  fable5-orchestrator.manifest  graphify.manifest  last30days-skill.manifest  learn-claude-code.manifest  pensyve.manifest  skillopt.manifest  stokowski.manifest  symphony.manifest  system-prompts-leaks.manifest  workflow-sources.txt
sources/extractions/: claude-commands-docs.json  claude-docs-docs.json  claude-video-docs.json  claude-workflow-blogs-docs.json  fable-videos-docs.json  framework-design-docs.json  graphify-docs.json  harness-loop-graph-engineering-docs.json  marketplace-inventory-docs.json  media-docs.json  orchestrator-repos-docs.json
sources/media/: autonomous-execution-program-20260719.md  claude-code-memory-plan.md  framework-plan-ladybug.md  harness-engineering-research.json  marketplace-235-relevant.txt  second-brain-report-20260722b.md  yt-9CiOwbmOKdU-memory.md  (+2 more)
tests/: test_artifacts.py  test_chunks.py  test_currency_apply.py  test_currency_broad.py  test_currency_decide.py  test_currency_proc.py  test_currency_report.py  test_currency_run.py  test_currency_sync.py  test_currency_upstream.py  test_graph_clone.py  test_hook_guard.py  test_lint_checks.py  test_manifest_add.py  test_pr.py  test_smoke.py
(+11 files in other folders)
