[project]
name = "kb-setup"
version = "0.1.0"
description = "Thin helpers for the knowledge-base graphify substrate"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
kb-setup = "kb_setup.cli:main"

[dependency-groups]
dev = [
  "ruff>=0.11",
  "ty>=0.0.1a1",
  "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kb_setup"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
